--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -10,6 +10,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -26,20 +27,30 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Trivy Installation
+      - name: Install Trivy
         run: |
           sudo apt-get update
           sudo apt-get install -y wget apt-transport-https gnupg lsb-release
-          wget -qO - https://aquasecurity.github.io/trivy-repo/debian/public.key | sudo apt-key add -
-          echo "deb https://aquasecurity.github.io/trivy-repo/debian $(lsb_release -sc) main" | sudo tee /etc/apt/sources.list.d/trivy.list
-          sudo apt-get update -y
+          wget -qO- https://aquasecurity.github.io/trivy-repo/debian/public.key | \
+            sudo gpg --dearmor -o /usr/share/keyrings/trivy.gpg
+          echo "deb [signed-by=/usr/share/keyrings/trivy.gpg] https://aquasecurity.github.io/trivy-repo/debian $(lsb_release -sc) main" | \
+            sudo tee /etc/apt/sources.list.d/trivy.list
+          sudo apt-get update
           sudo apt-get install -y trivy
 
       - name: Trivy File System Scan
         run: trivy fs --format json -o fs-report.json .
 
-      - name: Gitleaks Installation
-        run: sudo apt install -y gitleaks
+      - name: Install Gitleaks
+        run: sudo apt-get install -y gitleaks
 
-      - name: Gitleaks code scan
+      - name: Gitleaks Code Scan
         run: gitleaks detect -s . -r gitleaks-report.json -f json
+
+      - name: Upload Reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: security-reports
+          path: |
+            fs-report.json
+            gitleaks-report.json
