--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   compile:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
       - uses: actions/checkout@v4
@@ -19,7 +19,7 @@ jobs:
         run: mvn -B package --file pom.xml
 
   security-checks:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: compile
     steps:
       - uses: actions/checkout@v4
