--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -48,3 +48,15 @@ jobs:
           path: |
             fs-report.json
             gitleaks-report.json
+  test:
+    runs-on: self-hosted
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Unit test cases
+        run: mvn test
