--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -21,6 +21,7 @@ jobs:
   security-checks:
     runs-on: self-hosted
     needs: compile
+
     steps:
       - uses: actions/checkout@v4
 
@@ -35,8 +36,7 @@ jobs:
       - name: Trivy File System Scan
         run: trivy fs --format json -o fs-report.json .
 
-      # ---- Modified Gitleaks only ----
-      - name: Install Gitleaks (Binary, non interactive)
+      - name: Install Gitleaks (Binary non-interactive)
         run: |
           wget -q https://github.com/gitleaks/gitleaks/releases/latest/download/gitleaks_linux_amd64.tar.gz
           tar -xzf gitleaks_linux_amd64.tar.gz
@@ -45,7 +45,6 @@ jobs:
 
       - name: Gitleaks Scan
         run: gitleaks detect --source . --report-path gitleaks-report.json --format json
-      # ---- End of change ----
 
       - name: Upload Reports
         uses: actions/upload-artifact@v4
@@ -57,6 +56,7 @@ jobs:
 
   test:
     runs-on: self-hosted
+    needs: security-checks
 
     steps:
       - uses: actions/checkout@v4
